testData/diagnostics/interp_str_wrong_tempalte.diag.txt
ERROR: expected 'IDENTIFIER'
testData/diagnostics/interp_str_wrong_tempalte.nut:3:12

println($"{{{{{{{{")
            ^


